[package]
name = "gain_gui_egui"
version = "0.1.0"
edition = "2021"
authors = [
    "Billy Messenger <billydm@noreply.codeberg.org>",
    "Robbert van der Helm <mail@robbertvanderhelm.nl>",
]
license = "ISC"
description = "A simple gain plugin with an egui GUI"

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", branch = "master", features = [
    "assert_process_allocs",
    "standalone",
] }
nih_plug_egui = { path = "../../" }
atomic_float = "1.1"
